# lwam

./: Cargo.toml  README.md  TODO.md
src/: lib.rs  main.rs
src/prolog/: allocator.rs  and_stack.rs  codegen.rs  debray_allocator.rs  fixtures.rs  heapview.rs  indexing.rs  io.rs  iterators.rs  machine.rs  naive_allocator.rs  or_stack.rs  prolog_parser.lalrpop  prolog_parser.rs  targets.rs
